// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses 
    totalling 
    €1,141.95
  </h2>
</div>
`;

exports[`should render component correctly with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense 
    totalling 
    €1,095.00
  </h2>
</div>
`;

exports[`should render component correctly without expenses 1`] = `
<div>
  <h2>
    Viewing 
     
    expenses 
    totalling 
    €0.00
  </h2>
</div>
`;
